# REsQue-backend

./: .gitignore  .treeignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task-issue-template-.md  task-이슈-템플릿.md
app/: main.py
app/application/dto/: __init__.py  abc_dto.py  requirement_dto.py
app/application/mappers/: requirement_mapper.py
app/application/use_cases/requirement/: requirement_use_cases.py
app/applications/dto/: abc_dto.py  requirement_dto.py
app/applications/mappers/: requirement_mapper.py
app/applications/use_cases/: base_use_case.py
app/applications/use_cases/requirement/: requirement_use_cases.py
app/domains/document/entities/: document.py
app/domains/domain/entities/: domain.py
app/domains/feature/entities/: feature.py
app/domains/project/: __init__.py
app/domains/project/entities/: project.py  project_member.py
app/domains/project/value_objects/: project_member_role.py
app/domains/requirement/dto/: __init__.py  create_requirement_dto.py
app/domains/requirement/entities/: __init__.py  requirement.py  requirements.py
app/domains/requirement/repositories/: __init__.py  requirement_repository.py
app/domains/requirement/use_cases/: create_requirement_use_case.py  requirement_use_cases.py
app/domains/requirement/value_objects/: __init__.py  requirement_complexity.py  requirement_priority.py  (+2 more)
app/interface/api/: main_router.py
app/shared/domain/: base_entity.py
scripts/cli/: app.py
scripts/cli/commands/: __init__.py  domain_commands.py  util_commands.py
tests/intergration/api/: conftest.py
(+21 files in other folders)
